    files stored in HDFS and other filesystems. (Allan Yan via cutting)

    HADOOP-10044 Improve the javadoc of rpc code (sanjay Radia)

    HADOOP-10488. TestKeyProviderFactory fails randomly. (tucu)

    HADOOP-10431. Change visibility of KeyStore.Options getter methods to public. (tucu)

    HADOOP-10583. bin/hadoop key throws NPE with no args and assorted other fixups. (clamb via tucu)

  OPTIMIZATIONS

    HADOOP-7761. Improve the performance of raw comparisons. (todd)

    HADOOP-8589. ViewFs tests fail when tests and home dirs are nested (sanjay Radia)

Release 2.5.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    HADOOP-10474 Move o.a.h.record to hadoop-streaming. (wheat9)

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)

  IMPROVEMENTS

    HADOOP-10451. Remove unused field and imports from SaslRpcServer.
    (Benoy Antony via jing9)

    HADOOP-10345. Sanitize the the inputs (groups and hosts) for the proxyuser
    configuration. (Benoy Antony via jing9)

    HADOOP-10454. Provide FileContext version of har file system. (Kihwal Lee
    via jeagles)

    HADOOP-10104. Update jackson to 1.9.13 (Akira Ajisaka via stevel)

    HADOOP-10485. Remove dead classes in hadoop-streaming. (wheat9)

    HADOOP-10503. Move junit up to v 4.11. (cnauroth)

    HADOOP-10535. Make the retry numbers in ActiveStandbyElector configurable.
    (jing9)

    HADOOP-10322. Add ability to read principal names from a keytab.
    (Benoy Antony and Daryn Sharp via kihwal)

    HADOOP-10549. MAX_SUBST and varPat should be final in Configuration.java.
    (Gera Shegalov via cnauroth)

    HADOOP-10471. Reduce the visibility of constants in ProxyUsers.
    (Benoy Antony via wheat9)

    HADOOP-10556. Add toLowerCase support to auth_to_local rules 
    for service name. (tucu)

    HADOOP-10467. Enable proxyuser specification to support list of users in
    addition to list of groups (Benoy Antony via Arpit Agarwal)
