@@ -373,6 +373,18 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+specifier|final
+name|Options
+name|options
+init|=
+name|KeyProvider
+operator|.
+name|options
+argument_list|(
+name|getConf
+argument_list|()
+argument_list|)
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -442,6 +454,8 @@ operator|new
 name|CreateCommand
 argument_list|(
 name|keyName
+argument_list|,
+name|options
 argument_list|)
 expr_stmt|;
 if|if
@@ -620,20 +634,20 @@ operator|&&
 name|moreTokens
 condition|)
 block|{
-name|getConf
-argument_list|()
+name|options
 operator|.
-name|set
+name|setBitLength
 argument_list|(
-name|KeyProvider
+name|Integer
 operator|.
-name|DEFAULT_BITLENGTH_NAME
-argument_list|,
+name|parseInt
+argument_list|(
 name|args
 index|[
 operator|++
 name|i
 index|]
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -653,15 +667,38 @@ operator|&&
 name|moreTokens
 condition|)
 block|{
-name|getConf
-argument_list|()
+name|options
 operator|.
-name|set
+name|setCipher
 argument_list|(
-name|KeyProvider
+name|args
+index|[
+operator|++
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+literal|"--description"
 operator|.
-name|DEFAULT_CIPHER_NAME
-argument_list|,
+name|equals
+argument_list|(
+name|args
+index|[
+name|i
+index|]
+argument_list|)
+operator|&&
+name|moreTokens
+condition|)
+block|{
+name|options
+operator|.
+name|setDescription
+argument_list|(
 name|args
 index|[
 operator|++
@@ -1906,6 +1943,8 @@ name|USAGE
 init|=
 literal|"create<keyname> [--cipher<cipher>] [--size<size>]\n"
 operator|+
+literal|"                     [--description<description>]\n"
+operator|+
 literal|"                     [--provider<provider>] [--help]"
 decl_stmt|;
 DECL|field|DESC
@@ -1928,17 +1967,24 @@ operator|+
 literal|"length using the --size argument.\n"
 decl_stmt|;
 DECL|field|keyName
+specifier|final
 name|String
 name|keyName
-init|=
-literal|null
 decl_stmt|;
-DECL|method|CreateCommand (String keyName)
+DECL|field|options
+specifier|final
+name|Options
+name|options
+decl_stmt|;
+DECL|method|CreateCommand (String keyName, Options options)
 specifier|public
 name|CreateCommand
 parameter_list|(
 name|String
 name|keyName
+parameter_list|,
+name|Options
+name|options
 parameter_list|)
 block|{
 name|this
@@ -1946,6 +1992,12 @@ operator|.
 name|keyName
 operator|=
 name|keyName
+expr_stmt|;
+name|this
+operator|.
+name|options
+operator|=
+name|options
 expr_stmt|;
 block|}
 DECL|method|validate ()
@@ -2027,17 +2079,6 @@ argument_list|()
 expr_stmt|;
 try|try
 block|{
-name|Options
-name|options
-init|=
-name|KeyProvider
-operator|.
-name|options
-argument_list|(
-name|getConf
-argument_list|()
-argument_list|)
-decl_stmt|;
 name|provider
 operator|.
 name|createKey
