@@ -651,6 +651,162 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|/* HADOOP-10586 KeyShell didn't allow -description. */
+annotation|@
+name|Test
+DECL|method|testKeySuccessfulCreationWithDescription ()
+specifier|public
+name|void
+name|testKeySuccessfulCreationWithDescription
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|outContent
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+name|String
+index|[]
+name|args1
+init|=
+block|{
+literal|"create"
+block|,
+literal|"key1"
+block|,
+literal|"--provider"
+block|,
+literal|"jceks://file"
+operator|+
+name|tmpDir
+operator|+
+literal|"/keystore.jceks"
+block|,
+literal|"--description"
+block|,
+literal|"someDescription"
+block|}
+decl_stmt|;
+name|int
+name|rc
+init|=
+literal|0
+decl_stmt|;
+name|KeyShell
+name|ks
+init|=
+operator|new
+name|KeyShell
+argument_list|()
+decl_stmt|;
+name|ks
+operator|.
+name|setConf
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|rc
+operator|=
+name|ks
+operator|.
+name|run
+argument_list|(
+name|args1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|rc
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|outContent
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"key1 has been successfully "
+operator|+
+literal|"created."
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|outContent
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+name|String
+index|[]
+name|args2a
+init|=
+block|{
+literal|"list"
+block|,
+literal|"--metadata"
+block|,
+literal|"--provider"
+block|,
+literal|"jceks://file"
+operator|+
+name|tmpDir
+operator|+
+literal|"/keystore.jceks"
+block|}
+decl_stmt|;
+name|rc
+operator|=
+name|ks
+operator|.
+name|run
+argument_list|(
+name|args2a
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|rc
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|outContent
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"description"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|outContent
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"someDescription"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Test
 DECL|method|testInvalidKeySize ()
